@@ -1,3 +1,23 @@
+/**
+ *
+ * @author Wei-Ming Wu
+ *
+ *
+ * Copyright 2013 Wei-Ming Wu
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not
+ * use this file except in compliance with the License. You may obtain a copy of
+ * the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * License for the specific language governing permissions and limitations under
+ * the License.
+ *
+ */
 package net.sf.rubycollect4j;
 
 import java.util.Comparator;
@@ -10,7 +30,14 @@ import net.sf.rubycollect4j.block.TransformBlock;
 import net.sf.rubycollect4j.block.WithInitBlock;
 import net.sf.rubycollect4j.block.WithObjectBlock;
 
-public interface RubyEnumerableEagerMethods<E> {
+/**
+ * 
+ * RubyEnumerableBase defines all eager methods of a RubyRnumerable should have.
+ * 
+ * @param <E>
+ *          the type of the elements
+ */
+public interface RubyEnumerableBase<E> {
 
   /**
    * Checks if null or false included.
