@@ -130,3 +130,5 @@ Version 1.5.0
 + Implemented RubyEnumerable#lazy
 
 + Added freeze() & frozen?() to RubyArray & RubyHash
+
+* Checked 'false' in RubyEnumerable#all? & RubyEnumerable#any?
